[package]
name = "mpz-poly-proof-core"
version = "0.1.0"
edition = "2024"

[lib]
name = "mpz_poly_proof_core"

[dependencies]
mpz-circuits-new = { workspace = true }
mpz-fields = { path = "../fields" }
rand_chacha = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1"
zerocopy = { workspace = true }

[features]
default = []
fixture = ["mpz-circuits-new/fixtures"]

[dev-dependencies]
itybity = "0.3"
hybrid-array = "0.4"
rand = "0.9"
criterion = { version = "0.5", default-features = false }

[[bench]]
name = "prover"
harness = false
required-features = ["fixture"]

[[bench]]
name = "verifier"
harness = false
required-features = ["fixture"]
