[package]
name = "mpz-poly-proof-core"
version = "0.1.0"
edition = "2024"

[lib]
name = "mpz_poly_proof_core"

[features]
default = []
fixture = ["mpz-circuits-new/fixtures", "dep:mpz-poly-proof-macros"]

[dependencies]
mpz-circuits-new = { workspace = true }
mpz-fields = { workspace = true }
# Only needed to `#[poly_kernel]` the coverage fixture; pulled in by
# the `fixture` feature.
mpz-poly-proof-macros = { workspace = true, optional = true }
rand_chacha = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
zerocopy = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
criterion = { workspace = true }

[build-dependencies]
mpz-poly-proof-lifter = { workspace = true }
mpz-circuits-new = { workspace = true, features = ["fixtures"] }
mpz-fields = { workspace = true }

[[bench]]
name = "prover"
harness = false
required-features = ["fixture"]

[[bench]]
name = "verifier"
harness = false
required-features = ["fixture"]
